SUBDIRS=

noinst_LIBRARIES=libHamiltonian.a

libHamiltonian_a_SOURCES=AbstractHamiltonian.cc \
AnisotropicSpinChainHamiltonian.cc \
AKLTHamiltonian.cc \
DiamondSpinChainHamiltonian.cc \
DoubleTriangleSpinChainHamiltonian.cc \
ExplicitHamiltonian.cc \
Mn12Hamiltonian.cc \
NonPeriodicDMRGHamiltonian.cc \
PeriodicDMRGHamiltonian.cc \
OpenDiamondSpinChainHamiltonian.cc \
PeriodicSpinChainHamiltonian.cc \
PeriodicAnisotropicSpinChainHamiltonian.cc \
PeriodicSandGlassSpinChainHamiltonian.cc \
PeriodicXXZSpinChainHamiltonian.cc \
SpinChainHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
SandGlassSpinChainHamiltonian.cc \
MultipleSpinChainHamiltonian.cc \
TriangleSpinChainHamiltonian.cc \
V15Hamiltonian.cc \
XXZSpinChainHamiltonian.cc \
TrappedBosonHamiltonian.cc \
ParticleOnTorusCoulombHamiltonian.cc \
ParticleOnTorusDeltaHamiltonian.cc \
ParticleOnTorusCoulombDMRGReadyHamiltonian.cc \
ParticleOnTorusCoulombWithSpinHamiltonian.cc \
ParticleOnSphereCoulombHamiltonian.cc \
ParticleOnSphereDeltaHamiltonian.cc \
ParticleOnCircleCoulombHamiltonian.cc \
ApproximateFermionOnTorusCoulombHamiltonian.cc \
ParticleOnSphereDeltaModifiedHamiltonian.cc \
PeriodicXXZSpinChainWithSecondNearestNeighborCouplingHamiltonian.cc \
QuantumDots3DHamiltonian.cc \
AbstractQHEHamiltonian.cc \
AbstractQHEOnSphereHamiltonian.cc \
AbstractQHEOnTorusHamiltonian.cc \
ParticleOnSphereCoulombDeltaHamiltonian.cc
