SUBDIRS=

noinst_LIBRARIES=libOptions.a

libOptions_a_SOURCES=Options.h \
AbstractOption.cc \
AbstractOption.h \
BooleanOption.cc \
BooleanOption.h \
SingleDoubleOption.cc \
SingleDoubleOption.h \
SingleDoubleInternalOption.cc \
SingleDoubleInternalOption.h \
MultipleDoubleOption.cc \
MultipleDoubleOption.h \
SingleIntegerOption.cc \
SingleIntegerOption.h \
SingleIntegerInternalOption.cc \
SingleIntegerInternalOption.h \
SingleStringOption.cc \
SingleStringOption.h \
SingleStringInternalOption.cc \
SingleStringInternalOption.h \
OptionGroup.cc \
OptionGroup.h \
OptionManager.cc \
OptionManager.h
