SUBDIRS=

noinst_LIBRARIES=libQHEHamiltonian.a

libQHEHamiltonian_a_SOURCES=ParticleOnDiskDeltaHamiltonian.cc \
ParticleOnTorusCoulombHamiltonian.cc \
ParticleOnTorusDeltaHamiltonian.cc \
ParticleOnTorusCoulombDMRGReadyHamiltonian.cc \
ParticleOnTorusCoulombWithSpinHamiltonian.cc \
ParticleOnSphereCoulombHamiltonian.cc \
ParticleOnSphereDeltaHamiltonian.cc \
ParticleOnCircleCoulombHamiltonian.cc \
ApproximateFermionOnTorusCoulombHamiltonian.cc \
ParticleOnSphereDeltaModifiedHamiltonian.cc \
AbstractQHEHamiltonian.cc \
AbstractQHEOnSphereHamiltonian.cc \
AbstractQHEOnTorusHamiltonian.cc \
ParticleOnSphereCoulombDeltaHamiltonian.cc \
ParticleOnSphereLaplacianDeltaHamiltonian.cc \
ParticleOnSphereCoulombLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDeltaWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnDiskHamiltonian.cc \
ParticleOnDiskLaplacianDeltaHamiltonian.cc \
ParticleOnSphereDipolarHamiltonian.cc \
ParticleOnSphereGenericHamiltonian.cc \
AbstractQHEOnSphereNBodyInteractionHamiltonian.cc \
ParticleOnSphereNBodyHardCoreHamiltonian.cc \
AbstractQHEOnDiskNBodyInteractionHamiltonian.cc \
ParticleOnDiskNBodyHardCoreHamiltonian.cc \
ParticleOnTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDipolarWithMagneticTranslationsHamiltonian.cc \
ParticleOnSphereWithSpinDeltaLaplacianDeltaHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithImpuritiesHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithTwoImpuritiesHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinHamiltonian.cc \
ParticleOnSphereWithSU4SpinGenericHamiltonian.cc
