SUBDIRS=

noinst_LIBRARIES=libQHEHamiltonian.a

libQHEHamiltonian_a_SOURCES=ParticleOnDiskDeltaHamiltonian.cc \
ParticleOnTorusCoulombHamiltonian.cc \
ParticleOnTorusDeltaHamiltonian.cc \
ParticleOnTorusCoulombDMRGReadyHamiltonian.cc \
ParticleOnTorusCoulombWithSpinHamiltonian.cc \
ParticleOnSphereCoulombHamiltonian.cc \
ParticleOnSphereDeltaHamiltonian.cc \
ParticleOnCircleCoulombHamiltonian.cc \
ApproximateFermionOnTorusCoulombHamiltonian.cc \
ParticleOnSphereDeltaModifiedHamiltonian.cc \
AbstractQHEHamiltonian.cc \
AbstractQHEOnSphereHamiltonian.cc \
AbstractQHEOnTorusHamiltonian.cc \
ParticleOnSphereCoulombDeltaHamiltonian.cc \
ParticleOnSphereLaplacianDeltaHamiltonian.cc \
ParticleOnSphereCoulombLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDeltaWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnDiskHamiltonian.cc \
ParticleOnDiskLaplacianDeltaHamiltonian.cc \
ParticleOnSphereDipolarHamiltonian.cc \
ParticleOnSphereGenericHamiltonian.cc \
AbstractQHEOnSphereNBodyInteractionHamiltonian.cc \
ParticleOnSphereNBodyHardCoreHamiltonian.cc \
ParticleOnDiskNBodyHardCoreHamiltonian.cc \
ParticleOnTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDipolarWithMagneticTranslationsHamiltonian.cc \
ParticleOnSphereWithSpinDeltaLaplacianDeltaHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithImpuritiesHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithTwoImpuritiesHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinHamiltonian.cc \
ParticleOnSphereWithSU4SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU4SpinL2Hamiltonian.cc \
ParticleOnSphereWithSU4SpinS2Hamiltonian.cc \
ParticleOnSphereL2Hamiltonian.cc \
LinearlySuperposedQHEOnSphereHamiltonian.cc \
AbstractQHEOnSphereWithSpinHamiltonian.cc \
ParticleOnSphereWithSpinGenericHamiltonian.cc \
ParticleOnSphereWithSpinL2Hamiltonian.cc \
ParticleOnSphereWithSpinS2Hamiltonian.cc \
ParticleOnTorusCoulombWithSpinAndMagneticTranslationsHamiltonian.cc \
AbstractQHEOnSphereWithSU3SpinHamiltonian.cc \
ParticleOnSphereWithSU3SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU3SpinL2Hamiltonian.cc \
AbstractQHEOnLatticeHamiltonian.cc \
ParticleOnLatticeDeltaHamiltonian.cc \
ParticleOnLatticeGenericHamiltonian.cc \
ParticleOnLatticeWithKyDeltaHamiltonian.cc \
ParticleOnDiskGenericHamiltonian.cc \
ParticleOnDiskLPlusLMinusHamiltonian.cc \
ParticleOnSphereGenericThreeBodyHamiltonian.cc \
ParticleOnDiskGenericThreeBodyHamiltonian.cc \
AbstractQHEOnSphereWithSpinNBodyInteractionHamiltonian.cc \
ParticleOnSphereWithSpinGenericThreeBodyHamiltonian.cc \
ParticleOnSphereQuantumWellHamiltonian.cc \
AbstractQHEOnSphereQuantumWellHamiltonian.cc \
ParticleOnSphereBilayerHamiltonian.cc \
AbstractQHEOnSphereWithSpinFullHamiltonian.cc \
ParticleOnSphereTwoLandauLevelHamiltonian.cc \
ProjectedQHEHamiltonian.cc \
ParticleOnSphereGenericFourBodyHamiltonian.cc \
ParticleOnSphereGenericFiveBodyHamiltonian.cc \
ParticleOnSphereProjectorHamiltonian.cc \
ParticleOnLatticeExternalHamiltonian.cc \
ParticleOnSphereTwoLandauLevelL2Hamiltonian.cc \
ParticleOnSphereEffectiveLatticeHamiltonian.cc \
AbstractQHEOnTorusNBodyInteractionHamiltonian.cc \
ParticleOnTorusThreeBodyHardcoreHamiltonian.cc \
AbstractQHEOnTorusWithSpinHamiltonian.cc \
ParticleOnTorusLaplacianDeltaHamiltonian.cc \
ParticleOnTorusWithSpinLaplacianDeltaHamiltonian.cc \
ParticleOnTorusHaffnianHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandHamiltonian.cc \
ParticleOnSphereTwoLandauLevelDeltaHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeWithSpinCheckerboardLatticeHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledCheckerboardHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandCheckerboardHamiltonian.cc \
ParticleOnSphereMultipleGroupNBodyHardCoreHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonian.cc \
ParticleOnCubicLatticeTwoBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandNBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFiveBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeChern2DiceLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern2SquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnCubicLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnSquareLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnSquareLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeWithKyNBodyDeltaHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledKagomeHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallThreeBandHamiltonian.cc \
ParticleOnLatticeKagomeLatticeThreeBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandCheckerboardHamiltonian.cc \
ParticleOnLatticeKagomeLatticeTwoBandHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonianWannier.cc \
AbstractQHEOnCylinderHamiltonian.cc \
ParticleOnCylinderLaplacianDeltaHamiltonian.cc
