SUBDIRS=

noinst_LIBRARIES=libQHEHamiltonian.a

libQHEHamiltonian_a_SOURCES=ParticleOnDiskDeltaHamiltonian.cc \
ParticleOnTorusCoulombHamiltonian.cc \
ParticleOnTorusDeltaHamiltonian.cc \
ParticleOnTorusCoulombDMRGReadyHamiltonian.cc \
ParticleOnTorusCoulombWithSpinHamiltonian.cc \
ParticleOnSphereCoulombHamiltonian.cc \
ParticleOnSphereDeltaHamiltonian.cc \
ParticleOnCircleCoulombHamiltonian.cc \
ApproximateFermionOnTorusCoulombHamiltonian.cc \
ParticleOnSphereDeltaModifiedHamiltonian.cc \
AbstractQHEHamiltonian.cc \
AbstractQHEOnSphereHamiltonian.cc \
AbstractQHEOnTorusHamiltonian.cc \
ParticleOnSphereCoulombDeltaHamiltonian.cc \
ParticleOnSphereLaplacianDeltaHamiltonian.cc \
ParticleOnSphereCoulombLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnTorusWithSpinAndMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDeltaWithMagneticTranslationsHamiltonian.cc \
AbstractQHEOnDiskHamiltonian.cc \
ParticleOnDiskLaplacianDeltaHamiltonian.cc \
ParticleOnSphereDipolarHamiltonian.cc \
ParticleOnSphereGenericHamiltonian.cc \
AbstractQHEOnSphereNBodyInteractionHamiltonian.cc \
ParticleOnSphereNBodyHardCoreHamiltonian.cc \
ParticleOnDiskNBodyHardCoreHamiltonian.cc \
ParticleOnTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTorusDipolarWithMagneticTranslationsHamiltonian.cc \
ParticleOnSphereWithSpinDeltaLaplacianDeltaHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithImpuritiesHamiltonian.cc \
ParticleOnSphereNBodyHardCoreWithTwoImpuritiesHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinHamiltonian.cc \
ParticleOnSphereWithSU4SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU4SpinL2Hamiltonian.cc \
ParticleOnSphereWithSU4SpinS2Hamiltonian.cc \
ParticleOnSphereL2Hamiltonian.cc \
LinearlySuperposedQHEOnSphereHamiltonian.cc \
AbstractQHEOnSphereWithSpinHamiltonian.cc \
ParticleOnSphereWithSpinGenericHamiltonian.cc \
ParticleOnSphereWithSpinL2Hamiltonian.cc \
ParticleOnSphereWithSpinS2Hamiltonian.cc \
ParticleOnTorusCoulombWithSpinAndMagneticTranslationsHamiltonian.cc \
AbstractQHEOnSphereWithSU3SpinHamiltonian.cc \
ParticleOnSphereWithSU3SpinGenericHamiltonian.cc \
ParticleOnSphereWithSU3SpinL2Hamiltonian.cc \
AbstractQHEOnLatticeHamiltonian.cc \
ParticleOnLatticeDeltaHamiltonian.cc \
ParticleOnLatticeGenericHamiltonian.cc \
ParticleOnLatticeWithKyDeltaHamiltonian.cc \
ParticleOnDiskGenericHamiltonian.cc \
ParticleOnDiskLPlusLMinusHamiltonian.cc \
ParticleOnSphereGenericThreeBodyHamiltonian.cc \
ParticleOnDiskGenericThreeBodyHamiltonian.cc \
AbstractQHEOnSphereWithSpinNBodyInteractionHamiltonian.cc \
ParticleOnSphereWithSpinGenericThreeBodyHamiltonian.cc \
ParticleOnSphereQuantumWellHamiltonian.cc \
AbstractQHEOnSphereQuantumWellHamiltonian.cc \
ParticleOnSphereBilayerHamiltonian.cc \
AbstractQHEOnSphereWithSpinFullHamiltonian.cc \
ParticleOnSphereTwoLandauLevelHamiltonian.cc \
ProjectedQHEHamiltonian.cc \
ParticleOnSphereGenericFourBodyHamiltonian.cc \
ParticleOnSphereGenericFiveBodyHamiltonian.cc \
ParticleOnSphereProjectorHamiltonian.cc \
ParticleOnLatticeExternalHamiltonian.cc \
ParticleOnSphereTwoLandauLevelL2Hamiltonian.cc \
ParticleOnSphereEffectiveLatticeHamiltonian.cc \
AbstractQHEOnTorusNBodyInteractionHamiltonian.cc \
ParticleOnTorusThreeBodyHardcoreHamiltonian.cc \
AbstractQHEOnTorusWithSpinHamiltonian.cc \
ParticleOnTorusLaplacianDeltaHamiltonian.cc \
ParticleOnTorusWithSpinLaplacianDeltaHamiltonian.cc \
ParticleOnTorusHaffnianHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorHamiltonian.cc \
ParticleOnLatticeWithSpinChernInsulatorNBodyHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandHamiltonian.cc \
ParticleOnSphereTwoLandauLevelDeltaHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeWithSpinCheckerboardLatticeHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledCheckerboardHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandCheckerboardHamiltonian.cc \
ParticleOnSphereMultipleGroupNBodyHardCoreHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonian.cc \
ParticleOnCubicLatticeTwoBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandNBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFiveBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeChern2DiceLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern2SquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnCubicLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnSquareLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnSquareLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeWithKyNBodyDeltaHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledKagomeHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallThreeBandHamiltonian.cc \
ParticleOnLatticeKagomeLatticeThreeBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandCheckerboardHamiltonian.cc \
ParticleOnLatticeKagomeLatticeTwoBandHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonianWannier.cc \
ParticleOnLatticeQuantumSpinHallTwoBandKagomeHamiltonian.cc \
AbstractQHEOnCylinderHamiltonian.cc \
ParticleOnLatticeWithSpinHaldaneModelTwoBandDecoupledThreeBodyHamiltonian.cc \
ParticleOnCylinderLaplacianDeltaHamiltonian.cc  \
ParticleOnTorusTwoLandauLevelsHamiltonian.cc \
ParticleOnLatticeChern2TriangularLatticeSingleBandHamiltonian.cc \
ParticleOnTorusWithSpinGenericHamiltonian.cc \
ParticleOnTorusGenericHamiltonian.cc \
AbstractQHEOnSphereWithSU4SpinCasimirHamiltonian.cc \
AbstractQHEOnTwistedTorusWithMagneticTranslationsHamiltonian.cc \
ParticleOnTwistedTorusCoulombWithMagneticTranslationsHamiltonian.cc \
ParticleOnTwistedTorusGenericHamiltonian.cc \
ParticleOnLatticeChern2TriangularLatticeSingleBandHamiltonianThreeBodyHamiltonian.cc \
ParticleOnCylinderCoulombHamiltonian.cc \
ParticleOnLatticeChern2DiceLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnCylinderStructureFactor.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandHamiltonian.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandFourBodyHamiltonian.cc \
AbstractQHEOnCylinderThreeBodyHamiltonian.cc \
ParticleOnCylinderThreeBodyLaplacianDeltaHamiltonian.cc \
AbstractQHEOnTorusWithSU3SpinHamiltonian.cc \
ParticleOnTorusWithSU3SpinGenericHamiltonian.cc \
ParticleOnLatticeChern3TwoOrbitalTriangularLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern3TwoOrbitalTriangularLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeNOrbitalSquareLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeNOrbitalSquareLatticeSingleBandThreeBodyHamiltonian.cc \
AbstractQHEOnTorusWithSU4SpinHamiltonian.cc \
ParticleOnTorusWithSU4SpinGenericHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFullThreeBandHamiltonian.cc \
ParticleOnCylinderGaffnianHamiltonian.cc \
ParticleOnCylinderFourBodyDeltaHamiltonian.cc \
AbstractQHEOnCylinderFourBodyHamiltonian.cc \
ParticleOnTorusThreeLandauLevelsHamiltonian.cc \
ParticleOnCylinderHaffnianHamiltonian.cc \
ParticleOnCylinderOrbitalProjection.cc \
ParticleOnCylinderNBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFullFourBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandPyrochloreHamiltonian.cc \
ParticleOnCylinderPermanentState.cc \
ParticleOnCylinderHaldaneRezayi.cc
