SUBDIRS=

noinst_LIBRARIES=libQHEHilbertSpace.a

libQHEHilbertSpace_a_SOURCES=Fermions.cc \
BosonOnDisk.cc \
ParticleOnSphere.cc \
FermionOnSphere.cc \
BosonOnSphere.cc \
ParticleOnTorus.cc \
ParticleOnTorusWithMagneticTranslations.cc \
FermionOnTorus.cc \
FullFermionOnTorus.cc \
BosonOnTorus.cc \
ParticleOnTorusWithSpin.cc \
FermionOnTorusWithSpin.cc \
FermionOnTorusWithMagneticTranslations.cc \
BosonOnTorusWithMagneticTranslations.cc \
BosonOnTorusState.cc \
ParticleOnDisk.cc \
FermionOnDisk.cc \
FermionOnSphereLongState.cc \
FermionOnDiskUnlimited.cc \
FermionOnSphereUnlimited.cc \
BosonOnSphereState.cc \
AbstractQHEParticle.cc \
ParticleOnSphereWithSpin.cc \
FermionOnSphereWithSpin.cc \
UnsignedIntegerTools.cc \
FullBosonOnSphere.cc \
FermionOnSphereHaldaneBasis.cc \
FermionOnSphereHaldaneHugeBasis.cc \
ParticleOnSphereWithSU4Spin.cc \
FermionOnSphereWithSU4Spin.cc \
FermionOnSphereSymmetricBasis.cc \
FermionOnSphereHaldaneSymmetricBasis.cc \
FermionOnSphereWithSpinLzSzSymmetry.cc \
FermionOnSphereWithSpinSzSymmetry.cc \
FermionOnSphereWithSpinLzSymmetry.cc \
FermionOnSphereLong.cc \
FermionOnSphereHaldaneBasisLong.cc \
FermionOnSphereSymmetricBasisLong.cc \
FermionOnSphereHaldaneSymmetricBasisLong.cc
