SUBDIRS=

noinst_LIBRARIES=libQHEHilbertSpace.a

libQHEHilbertSpace_a_SOURCES=Fermions.cc \
BosonOnDisk.cc \
ParticleOnSphere.cc \
FermionOnSphere.cc \
BosonOnSphere.cc \
ParticleOnTorus.cc \
ParticleOnTorusWithMagneticTranslations.cc \
FermionOnTorus.cc \
FullFermionOnTorus.cc \
BosonOnTorus.cc \
ParticleOnTorusWithSpin.cc \
ParticleOnTorusWithSpinAndMagneticTranslations.cc \
FermionOnTorusWithSpin.cc \
FermionOnTorusWithMagneticTranslations.cc \
FermionOnTorusWithSpinAndMagneticTranslations.cc \
BosonOnTorusWithMagneticTranslations.cc \
BosonOnTorusState.cc \
FermionOnDisk.cc \
FermionOnSphereLongState.cc \
FermionOnDiskUnlimited.cc \
FermionOnSphereUnlimited.cc \
BosonOnSphereState.cc \
AbstractQHEParticle.cc \
ParticleOnSphereWithSpin.cc \
FermionOnSphereWithSpin.cc \
FermionOnSphereWithSpinSqueezedBasis.cc \
FermionOnSphereWithSpinSzProjection.cc \
FullBosonOnSphere.cc \
FermionOnSphereHaldaneBasis.cc \
FermionOnSphereHaldaneHugeBasis.cc \
ParticleOnSphereWithSU4Spin.cc \
FermionOnSphereWithSU4Spin.cc \
FermionOnSphereSymmetricBasis.cc \
FermionOnSphereHaldaneSymmetricBasis.cc \
FermionOnSphereWithSpinLzSzSymmetry.cc \
FermionOnSphereWithSpinSzSymmetry.cc \
FermionOnSphereWithSpinLzSymmetry.cc \
FermionOnSphereLong.cc \
FermionOnSphereHaldaneBasisLong.cc \
FermionOnSphereSymmetricBasisLong.cc \
FermionOnSphereHaldaneSymmetricBasisLong.cc \
BosonOnSphereSymmetricBasis.cc \
BosonOnSphereShort.cc \
BosonOnSphereSymmetricBasisShort.cc \
ParticleOnSphereWithSU3Spin.cc \
FermionOnSphereWithSU3Spin.cc \
FermionOnSphereWithSU3SpinTzSymmetry.cc \
FermionOnSphereWithSU3SpinZ3Symmetry.cc \
FermionOnSphereWithSU3SpinTzZ3Symmetry.cc \
FermionOnSphereWithSpinAllSz.cc \
FermionOnSphereWithSpinAllSzLzSymmetry.cc \
HardCoreBoson.cc \
ParticleOnLattice.cc \
BosonOnLattice.cc \
HardCoreBosonOnLattice.cc \
BosonOnLatticeKy.cc \
BosonOnLatticeGeneric.cc \
HardCoreBosonOnLatticeGeneric.cc \
BosonOnLatticeGenericMomentumSpace.cc \
FermionOnDiskHaldaneBasis.cc \
FermionOnDiskLong.cc \
BosonOnDiskShort.cc \
BosonOnSphereHaldaneBasisShort.cc \
BosonOnDiskHaldaneBasisShort.cc \
FermionOnSphereWithSpinLong.cc \
FermionOnSphereWithSpinLzSzSymmetryLong.cc \
FermionOnSphereWithSpinLzSymmetryLong.cc \
FermionOnSphereWithSpinSzSymmetryLong.cc \
ParticleOnSphereManager.cc \
FermionOnLattice.cc \
FermionOnLatticeGenericMomentumSpace.cc \
FermionOnSphereUnnormalizedBasis.cc \
BosonOnSphereHaldaneHugeBasisShort.cc \
BosonOnSphereWithSpin.cc \
FermionOnSphereWithSpinHaldaneBasis.cc \
FermionOnSphereWithSpinHaldaneBasisLong.cc \
FermionOnSphereHaldaneLargeBasis.cc \
FermionOnSphereTwoLandauLevels.cc \
FermionOnSphereWithSpinHaldaneLzSzSymmetry.cc \
FermionOnSphereWithSpinHaldaneLargeBasis.cc \
BosonOnSphereTwoLandauLevels.cc \
FermionOnSphereWithSpinHaldaneLargeBasis.cc \
SingleBosonOnLatticeGeneric.cc \
FermionOnTorusWithSpinNew.cc \
BosonOnTorusShort.cc \
BosonOnCylinderShort.cc \
BosonOnSphereLong.cc \
BosonOnSphereHaldaneBasisLong.cc \
FermionOnSphereEfficient.cc \
FermionOnSphereFull.cc \
BosonOnSphereFullShort.cc \
FermionOnSphereThreeLandauLevels.cc \
BosonOnSphereWithSpinAllSz.cc \
BosonOnSphereWithSpinOld.cc \
FermionOnSphereFourLandauLevels.cc \
BosonOnSphereHaldaneSymmetricBasisShort.cc \
BosonOnDiskHaldaneHugeBasisShort.cc \
FermionOnSquareLatticeMomentumSpace.cc \
FermionOnSquareLatticeWithSpinMomentumSpace.cc \
FermionOnSquareLatticeNonPeriodicMomentumSpace.cc \
BosonOnSphereFusedBasis.cc \
BosonOnSphereTensorProductState.cc \
BosonOnSphereSumTensorProductState.cc \
FermionOnSquareLatticeMomentumSpaceLong.cc \
FermionOnSquareLatticeWithSpinMomentumSpaceLong.cc \
FermionOnCubicLatticeWithSpinMomentumSpace.cc \
FermionOnHyperCubicLatticeWithSpinMomentumSpace.cc \
FermionOnCubicLatticeWithSU4SpinMomentumSpace.cc \
BosonOnSquareLatticeMomentumSpace.cc \
FermionOnSphereWithSU4SpinLong.cc \
FermionOnCubicLatticeWithSU4SpinMomentumSpaceLong.cc \
FermionOnSquareLatticeWithSU4SpinMomentumSpace.cc \
FermionOnSquareLatticeWithSU4SpinMomentumSpaceLong.cc \
FermionOnSquareLatticeWithSU3SpinMomentumSpace.cc \
BosonOnSphereWithSU3Spin.cc \
BosonOnSquareLatticeWithSU3SpinMomentumSpace.cc \
BosonOnSphereThreeLandauLevels.cc \
BosonOnSphereWithSU4Spin.cc \
BosonOnSphereWithSU4SpinAllEntanglement.cc \
BosonOnSquareLatticeWithSU4SpinMomentumSpace.cc \
BosonOnLatticeKyLong.cc \
BosonOnSphereWithSU2Spin.cc \
BosonOnSquareLatticeWithSU2SpinMomentumSpace.cc \
BosonOnTorusWithMagneticTranslationsShort.cc \
BosonOnSquareLatticeWannierSpace.cc \
ParticleOnSquareLatticeWannierInterface.cc \
BosonOnCubicLatticeWithSU2SpinMomentumSpace.cc \
BosonOnCubicLatticeWithSU4SpinMomentumSpace.cc \
HardCoreBosonLong.cc \
BosonOnLatticeLong.cc \
BosonOnTorusWithSpin.cc \
BosonOnHyperCubicLatticeWithSU2SpinMomentumSpace.cc
