SUBDIRS=

noinst_LIBRARIES=libQHEOperator.a

libQHEOperator_a_SOURCES=ParticleOnSphereDensityDensityOperator.cc \
ParticleOnSphereWithSpinDensityDensityOperator.cc \
ParticleOnSphereDensityOperator.cc \
ParticleOnDiskDensityOperator.cc \
ParticleOnSphereNBodyOperator.cc \
ParticleOnSphereSquareTotalMomentumOperator.cc \
ParticleOnSphereLMinusOperator.cc \
ParticleOnSphereSquareTotalSpinOperator.cc \
ParticleOnSphereSquareTotalIsospinOperator.cc \
ParticleOnSphereWithSU4DensityDensityOperator.cc