SUBDIRS=

noinst_LIBRARIES=libFTIHamiltonian.a

libFTIHamiltonian_a_SOURCES=ParticleOnLatticeCheckerboardLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeWithSpinCheckerboardLatticeHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledCheckerboardHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandCheckerboardHamiltonian.cc \
ParticleOnLatticeChernInsulatorSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonian.cc \
ParticleOnCubicLatticeTwoBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeCheckerboardLatticeSingleBandFiveBodyHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandFuKaneMeleHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeSquareLatticeTwoOrbitalSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeChern2DiceLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern2SquareLatticeTwoOrbitalSingleBandHamiltonian.cc \
ParticleOnCubicLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnCubicLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeAlternativeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnSquareLatticeFourBandSimpleTIHamiltonian.cc \
ParticleOnSquareLatticeTwoBandSimpleTIHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeRubyLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeKagomeLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallTwoBandDecoupledKagomeHamiltonian.cc \
ParticleOnLatticeKagomeLatticeThreeBandHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFourBandCheckerboardHamiltonian.cc \
ParticleOnLatticeKagomeLatticeTwoBandHamiltonian.cc \
ParticleOnLatticeHaldaneModelSingleBandThreeBodyHamiltonianWannier.cc \
ParticleOnLatticeQuantumSpinHallTwoBandKagomeHamiltonian.cc \
ParticleOnLatticeWithSpinHaldaneModelTwoBandDecoupledThreeBodyHamiltonian.cc \
ParticleOnLatticeChern2TriangularLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern2TriangularLatticeSingleBandHamiltonianThreeBodyHamiltonian.cc \
ParticleOnLatticeChern2DiceLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandHamiltonian.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticePyrochloreSlabLatticeSingleBandFourBodyHamiltonian.cc \
ParticleOnLatticeChern3TwoOrbitalTriangularLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeChern3TwoOrbitalTriangularLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnLatticeNOrbitalSquareLatticeSingleBandHamiltonian.cc \
ParticleOnLatticeNOrbitalSquareLatticeSingleBandThreeBodyHamiltonian.cc \
ParticleOnCubicLatticeFourBandPyrochloreHamiltonian.cc \
ParticleOnLatticeQuantumSpinHallFullFourBandHamiltonian.cc \
ParticleOnLatticeEffectiveBilayerHaldaneLatticeSingleBandHamiltonian.cc
