SUBDIRS=

noinst_LIBRARIES=libFTIHilbertSpace.a

libFTIHilbertSpace_a_SOURCES=FermionOnLatticeWithSpinRealSpace.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpace.cc \
FermionOnLatticeWithSpinRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpaceAnd1DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpace.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpace.cc \
FermionOnLatticeWithSpinRealSpaceAnd2DTranslation.cc \
FermionOnLatticeWithSpinAndGutzwillerProjectionRealSpaceAnd2DTranslation.cc \
FermionOnLatticeRealSpace.cc \
FermionOnLatticeRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpace.cc \
BosonOnLatticeGutzwillerProjectionRealSpace.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpaceAnd2DTranslation.cc \
BosonOnLatticeRealSpaceOneOrbitalPerSiteAnd2DTranslation.cc \
BosonOnLatticeGutzwillerProjectionRealSpaceOneOrbitalPerSiteAnd2DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryRealSpaceAnd2DTranslation.cc \
FermionOnLatticeWithSpinSzSymmetryAndGutzwillerProjectionRealSpaceAnd2DTranslation.cc
