SUBDIRS=

noinst_LIBRARIES=libFTIOperator.a

libFTIOperator_a_SOURCES=ParticleOnLatticeRealSpaceWithSpinAnd2DTranslationSuperconductorOrderParameterOperator.cc \
ParticleOnLatticeRealSpaceAnd1DTranslationOneBodyOperator.cc \
ParticleOnLatticeRealSpaceWithSpinAnd2DTranslationS2Operator.cc \
ParticleOnLatticeRealSpaceWithSpinSuperconductorMomentumSpaceOrderParameterOperator.cc \
ParticleOnLatticeRealSpaceWithSpinAnd2DTranslationTwoBodyOperator.cc
