SUBDIRS=

noinst_LIBRARIES=libSpinHamiltonian.a

libSpinHamiltonian_a_SOURCES=AnisotropicSpinChainHamiltonian.cc \
AKLTHamiltonian.cc \
DiamondSpinChainHamiltonian.cc \
DoubleTriangleSpinChainHamiltonian.cc \
Mn12Hamiltonian.cc \
OpenDiamondSpinChainHamiltonian.cc \
PeriodicSpinChainHamiltonian.cc \
PeriodicAnisotropicSpinChainHamiltonian.cc \
PeriodicSandGlassSpinChainHamiltonian.cc \
PeriodicXXZSpinChainHamiltonian.cc \
SpinChainHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
SandGlassSpinChainHamiltonian.cc \
MultipleSpinChainHamiltonian.cc \
TriangleSpinChainHamiltonian.cc \
V15Hamiltonian.cc \
XXZSpinChainHamiltonian.cc \
PeriodicXXZSpinChainWith2ndNeighborCouplingHamiltonian.cc \
SpinChainHamiltonianWithTranslations.cc \
NDMAPSpinChainHamiltonian.cc \
AbstractSUNSpinHamiltonian.cc \
AbstractSUNSpinOnLatticeHamiltonian.cc \
SUNSpinOnLatticeQuadraticHamiltonian.cc \
DoubleTrianglePeriodicSpinChainHamiltonian.cc \
DoubleTrianglePeriodicSpinChainWithTranslationHamiltonian.cc \
HaldaneShastryHamiltonianWithTranslations.cc \
Potts3ChainHamiltonian.cc \
SpinChainAKLTHamiltonian.cc \
SpinChainWithDisorderHamiltonian.cc \
SpinChainLongRangeHamiltonian.cc \
SpinChainZ2InteractingHamiltonian.cc \
SpinChainXYZHamiltonian.cc \
Potts3ChainHamiltonianWithTranslations.cc \
SpinChainZ2InteractingHamiltonianWithTranslations.cc \
SpinChainXYZNaturalBoundaryTermHamiltonian.cc \
Potts3ChainNaturalBoundaryTermHamiltonian.cc
