SUBDIRS=

noinst_LIBRARIES=libSpinHilbertSpace.a

libSpinHilbertSpace_a_SOURCES=AbstractSpinChain.cc \
AbstractSpinChainWithTranslations.cc \
Spin1_2Chain.cc \
Spin1_2ChainWithTranslations.cc \
Spin1AKLTChain.cc \
Spin1Chain.cc \
Spin1FullAKLTChain.cc \
Spin1ChainWithTranslations.cc \
ThierryChain.cc \
AbstractSUNSpinCollection.cc \
GenericSUNSpinCollection.cc \
Potts3Chain.cc \
Spin1_2ChainFull.cc \
Potts3ChainWithTranslations.cc \
Spin1_2ChainFixedParity.cc
