SUBDIRS=

noinst_LIBRARIES=libSpinHilbertSpace.a

libSpinHilbertSpace_a_SOURCES=AbstractSpinChain.cc \
AbstractSpinChainWithTranslations.cc \
Spin1_2Chain.cc \
Spin1_2ChainWithTranslations.cc \
Spin1AKLTChain.cc \
Spin1Chain.cc \
Spin1FullAKLTChain.cc \
Spin1ChainWithTranslations.cc \
ThierryChain.cc \
AbstractSUNSpinCollection.cc \
GenericSUNSpinCollection.cc \
Potts3Chain.cc \
Spin1_2ChainFull.cc \
Potts3ChainWithTranslations.cc \
Spin1_2ChainFixedParity.cc \
Spin1_2ChainFixedParityWithTranslations.cc \
Potts4Chain.cc \
Spin1_2ChainMirrorSymmetry.cc \
Spin1_2ChainNew.cc \
Spin1_2ChainParitySymmetry.cc \
Spin1_2ChainFullAnd2DTranslation.cc \
Spin1_2ChainFullInversionAnd2DTranslation.cc \
AbstractDoubledSpinChain.cc \
DoubledSpin0_1_2_ChainWithTranslations.cc \
AbstractDoubledSpinChainWithTranslations.cc \
DoubledSpin1_2_Chain.cc \
DoubledSpin1_2_ChainWithTranslations.cc \
DoubledSpin0_1_2_ChainWithTranslationsAndZZSymmetry.cc\
Spin0_1_2_ChainWithTranslations.cc \
Spin0_1_2_ChainWithTranslationsStaggered.cc \
DoubledSpin0_1_2_ChainWithTranslationsStaggered.cc \
DoubledSpin0_1_2_ChainWithTranslationsStaggeredAndZZSymmetry.cc \
DoubledSpin1_2_ChainWithTranslations_alternative.cc \
Spin1ChainWithTranslationsAndSzSymmetry.cc \
Spin1ChainWithTranslationsAndInversionSymmetry.cc \
Spin1ChainWithTranslationsAndSzInversionSymmetries.cc \
PEPSLocalPhysicalAndVirtualSpin.cc \
Spin1_2ChainWithPseudospin.cc \
Spin1_2ChainNewAnd2DTranslation.cc \
Spin1_2ChainNewSzSymmetryAnd2DTranslation.cc \
Spin1_2ChainWithTranslationsAndSzSymmetry.cc \
Spin1_2ChainWithTranslationsAndInversionSymmetry.cc \
Spin1_2ChainWithTranslationsAndSzInversionSymmetries.cc	\
DoubledSpin0_1_2_ChainWithTranslationsAndZZSymmetryAndSublatticeQuantumNumbers.cc \
Spin2Chain.cc \
Spin2ChainWithTranslations.cc \
Spin2ChainWithTranslationsAndSzSymmetry.cc \
Spin2ChainWithTranslationsAndInversionSymmetry.cc \
Spin2ChainWithTranslationsAndSzInversionSymmetries.cc \
VirtualSpaceTransferMatrixWithTranslations.cc \
Spin1_2ChainWithPseudospinAnd2DTranslation.cc \
Spin1_2ChainWithPseudospinSzSymmetryAnd2DTranslation.cc \
Spin0_1_2_ChainWithTranslationsAndSublatticeQuantumNumbers.cc \
DoubledSpin0_1_2_ChainWithSquareTranslationsAndSublatticeQuantumNumbers.cc